--- a/tox.ini
+++ b/tox.ini
@@ -7,11 +7,11 @@ deps = -rrequirements.txt
 ignore_errors = True
 allowlist_externals = rm
                       cp
-commands = python3 -m mypy -p cc410 --html-report reports/mypy --junit-xml reports/mypy/mypy.xml
+commands = mypy -p cc410 --html-report reports/mypy --junit-xml reports/mypy/mypy.xml
            pytest --cov=cc410 --cov-report html:reports/coverage --cov-report xml:reports/coverage/coverage.xml --html=reports/pytest/index.html --junitxml=reports/pytest/pytest.xml test/ 
-           python3 -m flake8 --docstring-convention google --format=html --htmldir=reports/flake cc410 test
-           rm -rvf reports/doc
-           python3 -m pdoc --html --force --output-dir reports/doc cc410
+           flake8 --docstring-convention google --format=html --htmldir=reports/flake --count --exit-zero --statistics cc410 test
+           # rm -rvf reports/doc
+           # python3 -m pdoc --html --force --output-dir reports/doc cc410
            # rm -rvf docs
            # cp -rv reports/doc/cc410 docs/
            # python3 -m build
