Testing Flake Again

--- a/.github/workflows/build-python.yml
+++ b/.github/workflows/build-python.yml
@@ -57,8 +57,14 @@ jobs:
       - name: 4 - Run Tox
         run: tox -e py
 
-      - uses: TrueBrain/actions-flake8@v2
+      # - uses: TrueBrain/actions-flake8@v2
+      #  if: always()                # always run even if the previous step fails
+
+      - uses: reviewdog/action-flake8@v3
         if: always()                # always run even if the previous step fails
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
 
       # Step 5A - Publish JUnit Report
       # https://github.com/marketplace/actions/junit-report-action
