--- a/tox.ini
+++ b/tox.ini
@@ -9,10 +9,6 @@ allowlist_externals = rm
                       cp
 commands = mypy -p cc410 --html-report reports/mypy --junit-xml reports/mypy/mypy.xml
            pytest --cov=cc410 --cov-report html:reports/coverage --cov-report xml:reports/coverage/coverage.xml --html=reports/pytest/index.html --junitxml=reports/pytest/pytest.xml test/ 
-           flake8 --docstring-convention google --count --exit-zero --statistics cc410 test
            flake8 --docstring-convention google --format=html --htmldir=reports/flake cc410 test
-           # rm -rvf reports/doc
-           # python3 -m pdoc --html --force --output-dir reports/doc cc410
-           # rm -rvf docs
-           # cp -rv reports/doc/cc410 docs/
-           # python3 -m build
+           pdoc --html --force --output-dir reports/doc cc410
+           python3 -m build
