add blank branch

--- a/.github/workflows/build-python.yml
+++ b/.github/workflows/build-python.yml
@@ -2,6 +2,9 @@
 # 
 # Based on Starter Workflow Here
 # https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python#using-the-python-starter-workflow
+#
+# Assumes an empty branch named `badges` is present. 
+# https://stackoverflow.com/a/34100189
 
 # Workflow name
 name: Build Python
