--- a/.github/workflows/build-python.yml
+++ b/.github/workflows/build-python.yml
@@ -118,4 +118,4 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: app/build/libs/*.jar
+          files: dist/*
