--- a/.github/workflows/build-python.yml
+++ b/.github/workflows/build-python.yml
@@ -119,3 +119,20 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: dist/*
+
+      # Step 10A - Publish to Test PyPI
+      # https://github.com/pypa/gh-action-pypi-publish
+      # https://packaging.python.org/en/latest/guides/publishing-package-distribution-releases-using-github-actions-ci-cd-workflows/
+      - name: 10A - Publish to Test PyPi
+        uses: pypa/gh-action-pypi-publish@master
+        with:
+          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          repository_url: https://test.pypi.org/legacy/
+
+      # Step 10B - Publish to PyPI
+      # https://github.com/pypa/gh-action-pypi-publish
+      # https://packaging.python.org/en/latest/guides/publishing-package-distribution-releases-using-github-actions-ci-cd-workflows/
+      #- name: 10B - Publish to PyPi
+      #  uses: pypa/gh-action-pypi-publish@master
+      #  with:
+      #    password: ${{ secrets.PYPI_API_TOKEN }}
