--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
-name = register
-version = 1.0.3
+name = cc410-restaurant-register
+version = 1.0.4
 author = Russell Feldhausen
 author_email = russfeld@ksu.edu
 description = CC 410 Register
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/K-State-Computational-Core/restaurantregister-python
+url = https://github.com/russfeld/restaurantregister-python
 project_urls =
-    Bug Tracker = https://github.com/K-State-Computational-Core/restaurantregister-python/issues
+    Bug Tracker = https://github.com/russfeld/restaurantregister-python/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
