--- a/.github/workflows/build-python.yml
+++ b/.github/workflows/build-python.yml
@@ -125,6 +125,7 @@ jobs:
       # https://packaging.python.org/en/latest/guides/publishing-package-distribution-releases-using-github-actions-ci-cd-workflows/
       - name: 10A - Publish to Test PyPi
         uses: pypa/gh-action-pypi-publish@master
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           password: ${{ secrets.TEST_PYPI_API_TOKEN }}
           repository_url: https://test.pypi.org/legacy/
@@ -134,5 +135,6 @@ jobs:
       # https://packaging.python.org/en/latest/guides/publishing-package-distribution-releases-using-github-actions-ci-cd-workflows/
       - name: 10B - Publish to PyPi
         uses: pypa/gh-action-pypi-publish@master
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           password: ${{ secrets.PYPI_API_TOKEN }}
